# trading-bot-mt5

./: .coverage  .env.example  .gitignore  README.md  _tech_report.txt  _write_docs.py  _writedocs.py  backtest.py  conftest.py  dashboard.py  debug_report.html  fix_db.py  manage.ps1  pyproject.toml  query_trades.py  run.py  run_multi.py  todel.md
docs/: todo.md
docs/content/: rapport-analyse-pertes-2026-06-24.md
docs/dailyReports/: report_2026-06-08.md  report_2026-06-10.md
scratch/: check_daily_pivots.py  check_eurusd_trade.py  check_today_trades.py  daily_audit_query.py  extract_launching_logs.py  fix_eurusd_trade.py  get_mt5_history.py  get_mt5_position.py  read_last_trade.py  run_manual_reconciliation.py
scripts/: install-autostart.bat  print_prompt.py  send_report.py  start-all.ps1
src/: config.py
src/ai/: analyzer.py  ocr.py  prompts.py  strategy.py  vision.py
src/backtest/: __init__.py  data_source.py  engine.py  optimizer.py  report.py  rules_engine.py  simulated_executor.py  strategy_adapter.py  (+1 more)
strategiestoTest/: engine.py  run_all.py  strat_breakout.py  strat_macd_divergence.py  strat_mean_reversion.py  strat_trend_following.py
tests/: test_analyzer_recovery.py  test_backtest_data_source.py  test_backtest_report.py  test_backtest_rules_engine.py  test_backtest_simulated_executor.py  test_backtest_strategy_adapter.py  test_calendar_enrichment.py  test_database.py  test_executor.py  test_investing_calendar.py  test_pivots.py  test_prompts.py  test_reports.py  test_strategy.py  test_vision.py
trustedStrategies/: run_gold_macd_live.py
(+63 files in other folders)
