[project]
name = "trading-bot"
version = "0.1.0"
description = "Trading bot automatise IA pour MT5 / Fusion Markets"
requires-python = ">=3.11"
dependencies = [
    "MetaTrader5>=5.0.45",
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "apscheduler>=3.10.0",
    "pillow>=10.3.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "rich>=13.7.0",
    "tenacity>=8.3.0",
    "mss>=9.0.0",
    "mplfinance>=0.12.0",
    "playwright>=1.45.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
